--- a/swift_notes_app/android/app/src/debug/AndroidManifest.xml
+++ b/swift_notes_app/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ml.saurav0001kumar.keepnotesapp">
+    package="com.example.swiftnotesapp">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
